# rengine

./: .env.example  .flake8  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rengine/: helpers.py  response.py  strategy.py
src/rengine/strategies/: __init__.py
src/rengine/strategies/simple_math/: README.md  simple_math.py
src/rengine/strategies/simple_math/templates/: create_formula.j2
tests/: helpers.py
tests/strategies/simple_math/: test_simple_math.py
tests/strategies/simple_math/fixtures/vcr_cassettes/: test_area_calculations.yaml  test_assumptions.yaml  test_boolean_response.yaml  test_fractions.yaml  test_hex_multiplications.yaml  test_simple_addition.yaml
