[tool.poetry]
name = "rengine"
version = "0.0.1"
description = ""
authors = ["Greg Clarke <Greg@Clar.ke>"]
readme = "README.md"
packages = [{include = "rengine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
requests = "^2.32.3"
litellm = "^1.42.9"
python-dotenv = "^1.0.1"
numpy = "^2.0.1"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
vcrpy = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
